--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -4,6 +4,12 @@
     "title": "Профиль",
     "description": "Пользователь"
   },
+  "game_h1": "Игры",
+  "game_h2": "Выберите игру для участия",
+  "pvp_fight_h": "PVP Битва",
+  "pvp_fight_p": "Сражайтесь с другими игроками в рулетке",
+  "coin_flip_h": "Coin Flip",
+  "coin_flip_p": "Подбрасывание монеты 50/50",
   "menu": {
     "games": "Игры",
     "roulette": "Рулетка",
