--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -2,7 +2,12 @@
   "welcome": "Добро пожаловать",
   "profile": {
     "title": "Профиль",
-    "description": "Пользователь"
+    "description": "Пользователь",
+    "games_played": "Игры сыграно",
+    "winrate": "Винрейт",
+    "games_won": "Побед",
+    "earned": "Заработано",
+    "stars": "Звезд"
   },
   "game_h1": "Игры",
   "game_h2": "Выберите игру для участия",
@@ -15,5 +20,17 @@
     "roulette": "Рулетка",
     "inventory": "Инвентарь",
     "profile": "Профиль"
+  },
+  "inventory": {
+    "h1": "Инвентарь",
+    "h2": "Управляйте своими подарками",
+    "div1_p1": "Общая стоимость",
+    "div1_p2": "звезд",
+    "sellGifts_h1": "Выбрано подарков",
+    "sellGifts_h2": "Общая стоимость",
+    "sellGifts_btn1": "Продать за",
+    "sellGifts_btn2:": "Вывести за",
+    "sellGifts_p1": "Продажа пополняет внутриигровой баланс",
+    "sellGifts_p2": "Вывод отправлет подарки в Telegram"
   }
 }
