--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -29,7 +29,7 @@
     "sellGifts_h1": "Выбрано подарков",
     "sellGifts_h2": "Общая стоимость",
     "sellGifts_btn1": "Продать за",
-    "sellGifts_btn2:": "Вывести за",
+    "sellGifts_btn2": "Вывести за",
     "sellGifts_p1": "Продажа пополняет внутриигровой баланс",
     "sellGifts_p2": "Вывод отправлет подарки в Telegram"
   }
